tests/snapshots/integration_tests__stdlib_primitives_Clone.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Clone(detach = false):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,structural/Clone
