tests/snapshots/integration_tests__stdlib_primitives_Concat.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Concat(dim):
  inputs:
    a: [*shape_a]
    b: [*shape_b]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,structural/Concat
