tests/snapshots/integration_tests__stdlib_primitives_ConstScale.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ConstScale(factor):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,operations/ConstScale
