tests/snapshots/integration_tests__stdlib_primitives_Conv3d.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Conv3d(in_channels, out_channels, kernel_size, stride = 1, padding = 0, dilation = 1, groups = 1, bias = true):
  inputs:
    default: [batch, in_channels, depth, height, width]
  outputs:
    default: [batch, out_channels, *, *, *]
  impl:
    Source: core,convolutions/Conv3d
