tests/snapshots/integration_tests__stdlib_primitives_Crop.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Crop(target_height, target_width):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, channels, target_height, target_width]
  impl:
    Source: core,structural/Crop
