tests/snapshots/integration_tests__stdlib_primitives_DropPath.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron DropPath(drop_prob):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,regularization/DropPath
