tests/snapshots/integration_tests__stdlib_primitives_Dropblock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Dropblock(block_size = 7, drop_prob = 0.1):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, channels, height, width]
  impl:
    Source: core,regularization/Dropblock
