tests/snapshots/integration_tests__stdlib_primitives_Embedding.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Embedding(num_embeddings, embedding_dim):
  inputs:
    default: [*batch, seq_len]
  outputs:
    default: [*batch, seq_len, embedding_dim]
  impl:
    Source: core,embeddings/Embedding
