tests/snapshots/integration_tests__stdlib_primitives_Fork.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    main: [*shape]
    skip: [*shape]
  impl:
    Source: core,structural/Fork
