tests/snapshots/integration_tests__stdlib_primitives_GELU.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU
